[tool.poetry]
name = "mysqlclient_adapter"
version = "0.1.0"
description = "Adapter for mysqlclient to make its use more pythonic"
authors = ["David A"]
license = "MIT"
packages = [
    {include = MySQLdbAdapter.py}
]

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^1.4.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
